<resources>
    <string name="app_name">PhinconAttendance</string>
    <string name="pidc_logo">pidc-logo</string>
    <string name="skip">SKIP</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="digital_abs">DIGITAL ABSENSI</string>
    <string name="guna_menceg">Guna mencegah penyebaran virus Covid-19, Pemerintah telah mengeluarkan kebijakan Physical Distancing serta kebijakan bekerja, belajar, dan beribadah dari rumah.</string>
    <string name="kehadiran_sis">Kehadiran sistem absensi digital merupakan penemuan yang mampu menggantikan pencatatan data kehadiran secara manual</string>
    <string name="attendance_sys">ATTENDANCE SYSTEM</string>
    <string name="pengelolaan_kar">Pengelolaan karyawan di era digital yang baik, menghasilkan karyawan terbaik pula, salah satunya absensi karyawan</string>
    <string name="masker">SELALU PAKAI MASKER</string>
    <string name="create_your_account">Create your account</string>
    <string name="please_fill_fullname_no_ktp_ship_password_to_register_your_app"><![CDATA[Please fill Fullname, No. KTP, Ship & Password to register your app]]></string>
    <string name="username">Username</string>
    <string name="employee_full_name">Employee fullname</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="repeat_pwd">Repeat Password</string>
    <string name="already_hav">Already Have Account? please</string>
    <string name="forgot_password">Forgot password</string>
    <string name="please_fill_usernaame_password_new_password_to_reset_your_account"><![CDATA[Please fill Usernaame, Password & New Password to reset your account]]></string>
    <string name="no_ktp">No. KTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_question_mark">Forgot password ?</string>
    <string name="don_t_have_account_please">Don\'t Have Account? please</string>
    <string name="register">Register</string>
    <string name="welcome_to_login">Welcome to Login</string>
    <string name="please_fill_username_password_to_login_your_app_account"><![CDATA[Please fill Username & password to login your app account]]></string>
    <string name="login_now">Login Now</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="your_attendance">Your Attendance</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="hour_9_00">Hour: 9:00</string>
    <string name="_29_januari_2021">29 Januari 2021</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="location">Location</string>
    <string name="office_image">Office image</string>
    <string name="pt_phincon">PT. Phincon</string>
    <string name="office_88_k">Office. 88 @Kasablanka Office Tower 18th Floor</string>
    <string name="telkomsel">Telkomsel Smart Office</string>
    <string name="jl_jend">Jl. Jend. Gatot Subroto Kav. 52. Jakarta Selatan</string>
    <string name="rumah">Rumah</string>
    <string name="attendance_history">Attendance History</string>
    <string name="logs">Logs</string>
    <string name="general">GENERAL</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="user_image">User image</string>
    <string name="nanang_supriatna">NANANG SUPRIATNA</string>
    <string name="programer">PROGRAMER</string>
    <string name="ic_nik">Icon NIK</string>
    <string name="no_karyawan">No Karyawan</string>
    <string name="NIK_0909090909">NIK-0909090909</string>
    <string name="pwd">**********</string>
    <string name="change_password">Change Password</string>
    <string name="address_icon">Address Icon</string>
    <string name="alamat">Alamat</string>
    <string name="jakarta_selatan">Jakarta Selatan</string>
    <string name="sign_out">Sign Out</string>
    <string name="_9_00">9:00</string>
    <string name="stripe"> - </string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="fill_email_in">Fill email in</string>

</resources>