<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.home.HomeFragment">

    <View
        android:layout_width="wrap_content"
        android:layout_height="319dp"
        android:layout_marginTop="-140dp"
        android:background="@drawable/oval"
        android:translationZ="1dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:background="@drawable/cv_dashboard"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:paddingTop="54dp"
        android:paddingBottom="36dp"
        android:translationZ="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="6dp"
            android:paddingBottom="36dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                style="@style/your_attend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/avenir_black"
                android:text="@string/title_profile" />

            <ImageView
                android:id="@+id/btn_notification"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/edit_icon"
                android:elevation="4dp"
                android:src="@drawable/ic_edit" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_welcome_page"
            android:layout_width="match_parent"
            android:layout_height="241dp"
            android:elevation="4dp"
            app:cardBackgroundColor="#00F8F9F9"
            app:cardElevation="0dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/cv_dashboard_home"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingTop="32dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="18dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/iv_user"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/user_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ricardo" />


                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tv_current_time"
                    style="@style/profile_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:fontFamily="@font/avenir_black"
                    android:gravity="center_horizontal"
                    android:text="@string/nanang_supriatna" />

                <TextView
                    android:id="@+id/tv_current_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="65dp"
                    android:fontFamily="@font/avenir_roman"
                    android:gravity="center_horizontal"
                    android:text="@string/programer" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="12dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/avenir_black"
            android:text="@string/general" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/cv_dashboard_home"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/loc"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="17dp"
                    android:contentDescription="@string/ic_nik"
                    android:src="@drawable/ic_nik" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/office"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/avenir_black"
                        android:text="@string/no_karyawan" />

                    <TextView
                        android:id="@+id/tv_user_id"
                        style="@style/office_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_book"
                        android:text="@string/NIK_0909090909" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/cv_dashboard_home"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/loc"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="17dp"
                    android:contentDescription="@string/address_icon"
                    android:src="@drawable/ic_address" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/office"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/avenir_black"
                        android:text="@string/alamat" />

                    <TextView
                        android:id="@+id/tv_user_address"
                        style="@style/office_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_book"
                        android:text="@string/jakarta_selatan" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/white_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:background="@drawable/loc">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="17dp"
                    android:contentDescription="@string/ic_nik"
                    android:src="@drawable/ic_pwd" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/office"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/avenir_black"
                        android:text="@string/change_password" />

                    <TextView
                        android:id="@+id/tv_password"
                        style="@style/office_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_book"
                        android:text="@string/pwd" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>