<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg"
    tools:context=".ui.auth.register.RegisterActivity">

    <View
        android:layout_width="wrap_content"
        android:layout_height="319dp"
        android:layout_marginTop="-140dp"
        android:background="@drawable/oval"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:paddingHorizontal="36dp"
            android:paddingTop="74dp"
            android:text="@string/welcome_to_login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineHeight="24dp"
            android:paddingHorizontal="36dp"
            android:text="@string/please_fill_username_password_to_login_your_app_account"
            android:textColor="@color/white"
            tools:targetApi="p" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_welcome_page"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/blue_bg"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/cv_onboarding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingTop="30dp">

            <TextView
                style="@style/edit_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7.61dp"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/username"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/til_uname"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/text_edit_selector"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="20dp"
                android:paddingHorizontal="12dp"
                android:textColor="@color/te_hint"
                android:textColorHint="@color/te_hint"
                android:textSize="14sp" />

            <TextView
                style="@style/edit_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7.61dp"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/til_pwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/text_edit_selector"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="20dp"
                android:paddingHorizontal="12dp"
                android:textColor="@color/te_hint"
                android:textColorHint="@color/te_hint"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_to_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="43dp"
                android:gravity="end"
                android:text="@string/forgot_password_question_mark"
                android:textColor="@color/primary" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingBottom="17dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/btn_tertiary"
            android:fontFamily="@font/avenir_black"
            android:text="@string/login_now"
            android:textAppearance="@style/btn_auth"
            android:textColor="@color/text_secondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <TextView
                style="@style/already_hav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/don_t_have_account_please" />

            <TextView
                android:id="@+id/btn_to_register"
                style="@style/already_hav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:text="@string/register"
                android:textColor="@color/primary" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>